--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="ria_result.html">Reliance Result Checker</a></li>
             </ul>
         </nav>
     </div>
