--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </label>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="countryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="ria_result.html">Reliance Result Checker</a></li>
             </ul>
