--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -137,9 +137,10 @@
             </ul>
         </nav>
     </div>
-    <div class="history hide" id="history">
+    <div class="history" id="history" hidden>
         <button type="button" onclick="goBack()">Go Back</button>
         <button type="button" onclick="clearHistory()">Clear History</button><br>
+        <div id="historyWarning">No recorded history found!</div>
         <div id="historyDisplayArea"></div>
         </div>
     <div id="container" class="show">
