Loading animation glitch fixed

--- a/ria_result.html
+++ b/ria_result.html
@@ -243,11 +243,14 @@
             <br /><button type="button" id="predictB" onclick="resultCheck()">
                 Check
             </button>
+        </div>    
+        <div id="loadingGif" hidden>        
+        <div class="spinner-border" class="" role="status">
+                <span class="sr-only"></span>
+            </div>
         </div>
         <div id="output" hidden>
-            <div class="spinner-border" id="loadingGif" role="status" hidden>
-                <span class="sr-only">Loading...</span>
-            </div>
+
         </div>
         <div id="phoneArea" hidden>
             <label for="nameO">Name: </label>
