Reliance -> RIA & by Gaurab Dhakal added in Title

--- a/ria_result.html
+++ b/ria_result.html
@@ -208,7 +208,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#" class="active">Reliance Result Checker</a></li>
+                <li><a href="#" class="active">RIA Result Checker</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
@@ -221,7 +221,7 @@
     </div>
     <div id="container" class="container show">
         <h3 align="center " style="margin-bottom: 20px">
-            Reliance Result Checker
+            Reliance Result Checker by Gaurab Dhakal
         </h3>
         <div>
             <!-- <label for="rollNumber">Symbol Number: </label> -->
