--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -131,9 +131,9 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#" class="active">Country Predictor</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="CountryPredictor.html"  class="active">Country Predictor</a></li>
+                <li><a href="genderGuesser.html">Gender Predictor</a></li>
+                <li><a href="ria_result.html">RIA Result Checker</a></li>
             </ul>
         </nav>
     </div>
