--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -107,9 +107,9 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#" class="active">Gender Predictor</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="CountryPredictor.html">Country Predictor</a></li>
+                <li><a href="genderGuesser.html" class="active">Gender Predictor</a></li>
+                <li><a href="ria_result.html">RIA Result Checker</a></li>
             </ul>
         </nav>
     </div>
