--- a/ria_result.html
+++ b/ria_result.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <title>Reliance Result Checker</title>
+    <title>RIA Result Checker</title>
     <link rel="stylesheet" href="CSS/navbar.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
@@ -198,18 +198,16 @@
 <body>
     <div id="navbar">
         <nav>
-            <div class="logo">
-                <p class="logop">Gaurab Dhakal</p>
-            </div>
+            <div class="logo">Gaurab Dhakal</div>
             <input type="checkbox" id="click" />
             <label for="click" class="menu-btn">
                 <i class="fas fa-bars"></i>
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#" class="active">RIA Result Checker</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="CountryPredictor.html">Country Predictor</a></li>
+                <li><a href="genderGuesser.html">Gender Predictor</a></li>
+                <li><a href="ria_result.html" class="active">RIA Result Checker</a></li>
             </ul>
         </nav>
     </div>
