--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
     <title>Gender Predictor</title>
@@ -55,6 +58,7 @@
         }
 
         input {
+            margin: 10px;
             font-family: "Roboto Slab", serif;
             padding: 10px;
             border: 1px solid grey;
@@ -82,6 +86,11 @@
             margin-bottom: 5px;
         }
 
+        .hideLoadingGif {
+            display: none;
+        } 
+
+
         #oa {
             color: whitesmoke;
         }
@@ -107,9 +116,9 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html">Country Predictor</a></li>
-                <li><a href="genderGuesser.html" class="active">Gender Predictor</a></li>
-                <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="active">Gender Predictor</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
     </div>
@@ -120,7 +129,9 @@
             <input type="text" id="name" placeholder="Enter the first name here! " />
             <button type="button" onclick="guessTheGender()">Predict</button>
         </div>
-
+        <div class="spinner-border hideLoadingGif" id="hideLoadingGif" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
         <p id="output"></p>
         <p align="center" id="warning">
             Note: In some cases, the requested result may not be displayed due to
