added youtube dislike return

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
             </ul>
         </nav>
     </div>
