--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -119,6 +119,7 @@
                 <li><a href="CountryPredictor.html" >Country Predictor</a></li>
                 <li><a href="genderGuesser.html"  class="active">Gender Predictor</a></li>
                 <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
             </ul>
         </nav>
     </div>
