added youtube dislike return feature

--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -141,7 +141,7 @@
         </div>
         <p id="output"></p>
         <p align="center" id="warning">
-            Note: ID of a video is for example <br> "<b>https://www.youtube.com/watch?v=kxOuG8jMIgI</b>" <br> in this link "<b>kxOuG8jMIgI</b>" is 
+            Note: ID of a video is: For example <br> "<b>https://www.youtube.com/watch?v=kxOuG8jMIgI</b>" <br> in this link "<b>kxOuG8jMIgI</b>" is 
             the ID.
         </p>
     </div>
