--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -86,20 +86,18 @@
             margin-bottom: 5px;
         }
 
-        .hideLoadingGif {
-            display: none;
-        } 
-
-
         #oa {
             color: whitesmoke;
         }
-        #warning{
-        background-color: black;
-        }
-        label{
+
+        #warning {
             background-color: black;
         }
+
+        label {
+            background-color: black;
+        }
+
         button:hover {
             background-color: black;
         }
@@ -121,9 +119,9 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html" >Country Predictor</a></li>
-                <li><a href="genderGuesser.html" >Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html"  class="active">Youtube Dislike Return</a></li>
+                <li><a href="CountryPredictor.html">Country Predictor</a></li>
+                <li><a href="genderGuesser.html">Gender Predictor</a></li>
+                <li><a href="youtubeDislikeReturn.html" class="active">Youtube Dislike Return</a></li>
                 <li><a href="ria_result.html">RIA Result Checker</a></li>
             </ul>
         </nav>
@@ -136,15 +134,19 @@
             <input type="text" id="name" placeholder="Enter the first name here! " />
             <button type="button" onclick="dislikeReturn()">Show</button>
         </div>
-        <div class="spinner-border hideLoadingGif" id="hideLoadingGif" role="status">
-            <span class="sr-only">Loading...</span>
+        <div id="loadingGif" hidden>
+            <div class="spinner-border" class="" role="status">
+                <span class="sr-only"></span>
+            </div>
         </div>
         <p id="output"></p>
         <p align="center" id="warning">
-            Note: ID of a video is: For example <br> "<b>https://www.youtube.com/watch?v=kxOuG8jMIgI</b>" <br> in this link "<b>kxOuG8jMIgI</b>" is 
+            Note: ID of a video is: For example <br> "<b>https://www.youtube.com/watch?v=kxOuG8jMIgI</b>" <br> in this
+            link "<b>kxOuG8jMIgI</b>" is
             the ID.
         </p>
     </div>
 </body>
 <script src="JS/ytdr.js"></script>
+
 </html>
