fixed few things and patched output area after each function call

--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -131,7 +131,7 @@
         <br />
         <div>
             <label for="name">Enter Video ID :</label><br>
-            <input type="text" id="name" placeholder="Enter the first name here! " />
+            <input type="text" id="name" placeholder="Enter video id here!!! " />
             <button type="button" onclick="dislikeReturn()">Show</button>
         </div> 
         <div id="loadingGif" hidden>
