--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -141,7 +141,7 @@
         </div>
         <p id="output"></p>
         <p align="center" id="warning">
-            Note: ID of a video is: For example <br> "<b>https://www.youtube.com/watch?v=kxOuG8jMIgI</b>" <br> in this
+            Note: ID of a video is: For example <br> "<b><a rel="noopener" href="https://www.youtube.com/watch?v=kxOuG8jMIgI" target="_blank">https://www.youtube.com/watch?v=kxOuG8jMIgI</a></b>" <br> in this
             link "<b>kxOuG8jMIgI</b>" is
             the ID.
         </p>
