--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -143,7 +143,7 @@
         <br />
         <div id="inpArea">
             <label for="name">Enter Symbol Number</label><br>
-            <input type="text" id="symbolN" placeholder="Enter Symbol Number Here  " /><br>
+            <input type="text" id="symbolN" placeholder="Symbol Number" /><br>
             <label for="name">Enter DOB(BS)</label><br>
             <input type="text" id="dob" placeholder="YYYY-MM-DD" /> <br>  
             <button type="button" onclick="chkResult()">Show</button>
@@ -158,6 +158,8 @@
             <br>
             <button type="button" onclick="goBackk()">GO BACK</button>
         </div>
+        <br>
+        <p><strong><i>NIC ASIA's API used!</i></strong></p>
     </div>
 
 
