added submit on enter feature

--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -139,7 +139,7 @@
         </nav>
     </div>
     <div id="container">
-        <h3 align="center">SEE Result Checker 2079/80</h3>
+        <h3 align="center"><strong> SEE Result Checker 2079/80</strong></h3>
         <br />
         <div id="inpArea">
             <label for="name">Enter Symbol Number</label><br>
