added history button and fixed few bugs and changed button design

--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -154,6 +154,8 @@
         <button type="button" onclick="goBackFromHistoryPage()">Go Back</button>
         <br>
         <h3 id="titleHistory">Your Search History</h3>
+<br>
+        <p id="historyWarning">No Recorded Data!!</p>
     <div id="history" >
 
     </div>
