Major CSS change

--- a/ria_result.html
+++ b/ria_result.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,192 +8,12 @@
     <link rel="stylesheet" href="CSS/navbar.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-    <style>
-        /* @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap'); */
-        @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
-        #phoneArea {
-            display: none;
-        }
-        @media (max-width: 480px) {
-            #phoneArea {
-                display: block;
-            }
-            body {
-                background-size: 100% 100%;
-                /* Adjust the background image properties as desired */
-            }
-
-            #output {
-                display: none;
-            }
-
-            .logop {
-                font-size: 20px;
-            }
-
-            #container {
-                width: 100%;
-                max-width: none;
-                overflow-x: auto;
-                padding: 0 10px;
-
-                background-image: none;
-                background-color: black;
-            }
-
-            #warning {
-                font-size: 10px;
-            }
-
-            input,
-            select {
-                width: 100%;
-            }
-
-            button {
-                margin-bottom: 10px;
-            }
-
-            table {
-                width: 100%;
-                overflow-x: auto;
-            }
-
-            table th,
-            table td {
-                text-align: center;
-                width: 100%;
-                padding: 10px;
-            }
-
-            table th {
-                font-weight: bold;
-            }
-        }
-
-        body {
-            font-family: "Roboto Slab", serif;
-            /* background-image: url('bg.jpg');
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            background-attachment: fixed;
-            background-size: cover; */
-        }
-
-        p {
-            margin: 5px;
-            font-family: "Roboto Slab", serif;
-        }
-
-        button {
-            cursor: pointer;
-            /* margin-top: 10px; */
-            margin-bottom: 7px;
-            transition: all 0.51s linear;
-            font-family: "Roboto Slab", serif;
-            padding: 10px 20px 10px 20px;
-            border: 1px solid gray;
-            border-radius: 2px;
-            background-color: rgb(230, 133, 7);
-            color: white;
-        }
-
-        input {
-            font-family: "Roboto Slab", serif;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid grey;
-            border-radius: 4px;
-        }
-
-        #container {
-            border: 1px solid grey;
-            border-radius: 5px;
-            width: 60%;
-            height: 70vh;
-            color: white;
-            background-size: 100% 100%;
-            /* background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp"); */
-            background-color: black;
-            margin-top: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        h3 {
-            margin-bottom: 5px;
-        }
-
-        #oa {
-            color: whitesmoke;
-            border: 1px solid white;
-            background-color: rgb(38, 16, 16);
-            padding: 4px;
-        }
-
-        button:hover {
-            background-color: black;
-        }
-
-        #ff {
-            /* border: 1px solid black; */
-            font-style: oblique;
-        }
-
-        .hideLoadingGif {
-            display: none;
-        }
-
-        li h3 {
-            font-family: "Roboto Slab", serif;
-        }
-
-        .hideContainer {
-            visibility: hidden;
-        }
-
-        .hide {
-            display: none;
-        }
-
-        .history {
-            color: white;
-        }
-
-        #historyDisplayArea {
-            margin-top: 10px;
-            padding: 20px 20px 20px 3px;
-        }
-
-        table tr {
-            margin: 10px;
-        }
-
-        td,
-        th {
-            border: 1px solid white;
-            padding: 10px;
-            background-color: black;
-            color: white;
-            font-size: 15px;
-            text-align: center;
-        }
-
-        select {
-            margin-bottom: 10px;
-            padding: 0 20px 0 20px;
-        }
-
-        option {
-            border: 1px solid gray;
-        }
-    </style>
+        <link rel="stylesheet" href="CSS/buttons.css">
+        <link rel="stylesheet" href="CSS/tables.css">
+        <link rel="stylesheet" href="CSS/extras.css">
+        <link rel="stylesheet" href="CSS/container.css">
+        <link rel="stylesheet" href="CSS/inputs.css">
 </head>
-
 <body>
     <div id="navbar">
         <nav>
