--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="CSS/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link rel="stylesheet" href="CSS/buttons.css">
+    <link rel="stylesheet" href="CSS/tables.css">
+    <link rel="stylesheet" href="CSS/extras.css">
+    <link rel="stylesheet" href="CSS/container.css">
+    <link rel="stylesheet" href="CSS/inputs.css">
+    <link rel="stylesheet" href="CSS/historyArea.css">
     <style>
         /* @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap'); */
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
@@ -20,107 +26,9 @@
             background-size: 100% 100%;
             background-attachment: fixed;
             background-size: cover;
-
-        }
-
-        @media (max-width: 480px) {
-            #warning {
-                font-size: 10px;
-            }
-
-            #container {
-                width: 80%;
-                height: auto;
-                margin-top: 30px;
-                margin-left: 0;
-                margin-right: 0;
-            }
-        }
-
-        p {
-            margin: 5px;
-            font-family: 'Roboto Slab', serif;
-        }
-
-        button {
-            cursor: pointer;
-            margin-top: 10px;
-            margin-bottom: 7px;
-            transition: all .51s linear;
-            font-family: 'Roboto Slab', serif;
-            padding: 10px 20px 10px 20px;
-            border: 1px solid gray;
-            border-radius: 2px;
-            background-color: rgb(230, 133, 7);
-            color: white;
-        }
-
-        input {
-            font-family: 'Roboto Slab', serif;
-            padding: 10px;
-            border: 1px solid grey;
-            border-radius: 4px;
-        }
-
-        #container {
-            border: 1px solid grey;
-            border-radius: 5px;
-            width: 40%;
-            height: 60vh;
-            color: white;
-            background-size: 100% 100%;
-            background-image: url('https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp');
-            margin-top: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        h3 {
-
-            margin-bottom: 5px;
-        }
-
-        #oa {
-            color: whitesmoke;
-            border: 1px solid white;
-            background-color: rgb(38, 16, 16);
-            padding: 4px;
-        }
-
-        button:hover {
-
-            background-color: black;
-        }
-
-        #ff {
-            /* border: 1px solid black; */
-            font-style: oblique;
-        }
-
-        .hideLoadingGif {
-           display: none;
-        }
-        .hideContainer{
-          visibility: hidden;
-        }
-        .hide{
-            display: none;
-        }
-        .history{
-            color: white;
-            
-        }
-        #historyDisplayArea{
-            margin-top: 10px;
-            padding: 20px 20px 20px 3px;
         }
     </style>
 </head>
-
 <body>
     <div id="navbar">
         <nav>
@@ -131,10 +39,10 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html"  class="active">Country Predictor</a></li>
+                <li><a href="CountryPredictor.html" class="active">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="ria_result.html">RIA Result Checker</a></li>
-                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
+                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
             </ul>
         </nav>
     </div>
@@ -143,7 +51,7 @@
         <button type="button" onclick="clearHistory()">Clear History</button><br>
         <div id="historyWarning">No recorded history found!</div>
         <div id="historyDisplayArea"></div>
-        </div>
+    </div>
     <div id="container" class="show">
         <h3 align="center">Country Predictor</h3>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
@@ -156,9 +64,10 @@
         <p text-align="center" id="warning">
             Note: In some cases, the requested result may not be displayed due to absence of the data of the name in the
             API.</p>
-            <button type="button" id="showHB" onclick="showHistory()">Show History</button>
+        <button type="button" id="showHB" onclick="showHistory()">Show History</button>
     </div>
 
 </body>
 <script src="JS/country_predictor.js"></script>
+
 </html>
