--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -9,11 +9,16 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
+    <link rel="stylesheet" href="CSS/buttons.css">
+    <link rel="stylesheet" href="CSS/tables.css">
+    <link rel="stylesheet" href="CSS/extras.css">
+    <link rel="stylesheet" href="CSS/container.css">
+    <link rel="stylesheet" href="CSS/inputs.css">
+    <link rel="stylesheet" href="CSS/historyArea.css">
     <title>SEE Result Checker 2079/80</title>
     <style>
         /* @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap'); */
         @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
-
         body {
             font-family: "Roboto Slab", serif;
             background-image: url("bg.jpg");
@@ -21,114 +26,6 @@
             background-size: 100% 100%;
             background-attachment: fixed;
             background-size: cover;
-        }
-
-        @media (max-width: 480px) {
-
-            /* Adjust container styles for mobile devices */
-            #container {
-                width: 80%;
-                /* Decrease the width to fit smaller screens */
-                height: auto;
-                /* Allow the container height to adjust based on content */
-                margin-top: 30px;
-                /* Decrease the top margin for better alignment */
-                margin-left: 0;
-                /* Remove the left margin to prevent centering */
-                margin-right: 0;
-                /* Remove the right margin to prevent centering */
-            }
-        }
-
-        p {
-            margin: 10px;
-            font-family: "Roboto Slab", serif;
-        }
-
-        button {
-            cursor: pointer;
-            margin-top: 10px;
-            transition: all 0.51s linear;
-            font-family: "Roboto Slab", serif;
-            padding: 10px 20px 10px 20px;
-            border: 1px solid gray;
-            border-radius: 0 6px 0 6px ;
-            background-color: rgb(230, 133, 7);
-            color: white;
-        }
-        #historyMain{
-            color: white;
-        }
-        input {
-            margin: 10px;
-            font-family: "Roboto Slab", serif;
-            padding: 10px;
-            border: 1px solid grey;
-            border-radius: 4px;
-        }
-
-        #container {
-            border: 1px solid grey;
-            border-radius: 5px;
-            width: 40%;
-            height: 60vh;
-            color: white;
-            background-size: 100% 100%;
-            background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp");
-            margin-top: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        h3 {
-            margin-bottom: 5px;
-        } 
-        #showHB{
-        margin-left:8px;
-        }
-
-        #oa {
-            color: whitesmoke;
-        }
-
-        #warning {
-            background-color: black;
-        }
-
-        label {
-            background-color: black;
-        }
-
-        button:hover {
-            background-color: black;
-        }
-        table tr {
-            margin: 10px;
-        }
-        #chkBtn{
-            margin-left: 9px;
-        }
-        td,
-        th {
-            border: 1px solid white;
-            padding: 10px;
-            background-color: black;
-            color: white;
-            font-size: 15px;
-            text-align: center;
-        }
-        #titleHistory{
-            text-align: center;
-            background-color: black;
-            border: 1px solid black;
-        }
-        #ff {
-            /* border: 1px solid black; */
-            font-style: oblique;
         }
     </style>
 </head>
