--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -26,6 +26,10 @@
             background-size: 100% 100%;
             background-attachment: fixed;
         }
+        h3{
+            text-align: center;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -52,7 +56,7 @@
         <div id="historyDisplayArea"></div>
     </div>
     <div id="container" class="show">
-        <h3 align="center">Country Predictor</h3>
+        <h3>Country Predictor</h3>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
             <button type="button" id="predictB" onclick="countryPredict()">Predict</button>
         </div>
