Change in Operator type

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <option value="/">/</option>
             </select>
             <br />
-            <button type="button" id="hideUponClick" onclick="giveoutput()">Calculate</button>
+            <button type="button" id="hideUponClick" onclick="giveOutput()">Calculate</button>
             <button type="reset" id="hideUponClick" onclick="clearOTA()">Reset</button>
         </form>
             <br />
