--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Gaurab Dhakal</title>
 </head>
 <link rel="stylesheet" href="./CSS/index.css" />
-
+<link rel="stylesheet" href="./CSS/navbar.css" />
 <body>
     <div id="navbar">
         <nav>
