font changes and removed result checkers from navbar

--- a/ria_result.html
+++ b/ria_result.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="ria_result.html" class="active">RIA Result Checker</a></li>
+                <!-- <li><a href="ria_result.html" class="active">RIA Result Checker</a></li> -->
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
             </ul>
         </nav>
