--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -44,7 +44,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="CountryPredictor.html" class="active">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <!-- <li><a href="ria_result.html">RIA Result Checker</a></li> -->
                 <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
             </ul>
         </nav>
