--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -41,8 +41,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="ria_result.html">RIA Result Checker</a></li>
-                <li><a href="#" class="active">SEE Result Checker 2079/80</a></li>
+                <!-- <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <li><a href="#" class="active">SEE Result Checker 2079/80</a></li> -->
             </ul>
         </nav>
     </div>
