added updates page

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -46,6 +46,7 @@
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <!-- <li><a href="ria_result.html">RIA Result Checker</a></li> -->
                 <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
+                <li><a href="updates.html">Updates</a></li>
             </ul>
         </nav>
     </div>
