--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -44,6 +44,7 @@
                 <li><a href="genderGuesser.html"  class="active">Gender Predictor</a></li>
                 <!-- <li><a href="ria_result.html">RIA Result Checker</a></li> -->
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
+                <li><a href="updates.html">Updates</a></li>
             </ul>
         </nav>
     </div>
