--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -45,6 +45,7 @@
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <!-- <li><a href="ria_result.html">RIA Result Checker</a></li> -->
                 <li><a href="youtubeDislikeReturn.html" class="active">Youtube Dislike Return</a></li>
+                <li><a href="updates.html">Updates</a></li>
             </ul>
         </nav>
     </div>
