added updates page

--- a/updates.html
+++ b/updates.html
@@ -32,7 +32,7 @@
     <h1 class="upH1">Updates</h1>
     <div class="updates">
         <ul>
-            <li><strong><u>2023 Dec 15:</u></strong> Font Family changed and <b>removed</b> RIA Result Checker and SEE Result Checker and added new updates page.</li>
+            <li><strong><u>2023 Dec 15:</u></strong> Font Family changed from "Fira Sans, sans-serif" to "Roboto Slab, serif" and <b>removed</b> RIA Result Checker and SEE Result Checker and added new updates page.</li>
         </ul>
     </div>
 </body>
