added updates page

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -42,14 +42,15 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html" class="active">Country Predictor</a></li>
+                <li><a href="#"  class="active">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <!-- <li><a href="ria_result.html">RIA Result Checker</a></li> -->
-                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
+                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
                 <li><a href="updates.html">Updates</a></li>
+                <!-- <li><a href="ria_result.html">RIA Result Checker</a></li>
+                <li><a href="SEE_Result.html">SEE Result Checker 2079/80</a></li> -->
             </ul>
         </nav>
-    </div>
+        </div>
     <div class="history" id="history" hidden>
         <button type="button" onclick="goBack()">Go Back</button>
         <button type="button" onclick="clearHistory()">Clear History</button><br>
