added updates page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     
     <title>Gaurab Dhakal</title>
 </head>
+<style>
+    body{
+        background-size: 100% 100%;
+    background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp");
+    }
+    #divcalculator{
+        background-color: rgb(204, 219, 208);
+    }
+</style>
 <link rel="stylesheet" href="./CSS/index.css" />
 <link rel="stylesheet" href="./CSS/navbar.css" />
 <body>
