--- a/ria_result.html
+++ b/ria_result.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="CSS/inputs.css">
 </head>
 <body>
+    <style>
+        /* body { margin-top: 0; } */
+    </style>
     <div id="navbar">
         <nav>
             <div class="logo">Gaurab Dhakal</div>
@@ -26,7 +29,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <!-- <li><a href="ria_result.html" class="active">RIA Result Checker</a></li> -->
+                <li><a href="ria_result.html" class="active">RIA Result Checker</a></li> 
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
             </ul>
         </nav>
