--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
                 <li><a href="updates.html">Updates</a></li>
-                <!-- <li><a href="ria_result.html">RIA Result Checker</a></li>
-                <li><a href="SEE_Result.html">SEE Result Checker 2079/80</a></li> -->
+                <li><a href="randomPage.html">Random Tools</a></li>
+                <!--<li><a href="SEE_Result.html">SEE Result Checker 2079/80</a></li> -->
             </ul>
         </nav>
     </div>
