--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
                 <li><a href="updates.html">Updates</a></li>
                 <li><a href="randomPage.html">Random Tools</a></li>
-                <!--<li><a href="SEE_Result.html">SEE Result Checker 2079/80</a></li> -->
             </ul>
         </nav>
     </div>
@@ -74,5 +73,5 @@
         </div>
     </div>
 </body>
-<script src="./JS/index._main.js"></script>
+<script src="./JS/index._main.js" type="text/javascript"></script>
 </html>
