fixed buttonTransform bug

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -57,7 +57,7 @@
     <div id="container" class="show">
         <h3>Country Predictor</h3>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
-            <button type="button" id="predictB buttonTransform" onmousedown="btnSize(true)"
+            <button type="button" class="btnTransform" id="predictB" onmousedown="btnSize(true)"
                     onmouseup="btnSize(false)" 
                     onmouseleave="btnSize(false)" onclick="countryPredict()">Predict</button>
         </div>
