fixed small issues and added invalid input warning

--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -45,7 +45,7 @@
         </nav>
     </div>
     <div id="container">
-        <h3 align="center">Youtube Dislike Return</h3>
+        <h3 align="center" style="margin-bottom: 15px;">Youtube Dislike Return</h3>
         <br />
         <div>
             <label for="name">Enter Video ID :</label><br>
