--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -15,11 +15,9 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <title>Gender Predictor</title>
     <style>
-        /* @import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap'); */
-        @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
-
+       @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
         body {
-            font-family: "Roboto Slab", serif;
+            font-family: 'Titillium Web', sans-serif;
             background-image: url("bg.jpg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
