--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <title>Youtube Dislike Return</title>
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
         body {
-            font-family: "Roboto Slab", serif;
+            font-family: 'Titillium Web', sans-serif;
             background-image: url("bg.jpg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
