added function to block full name submission

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
         body {
             font-family: 'Titillium Web', sans-serif;
             background-image: url('bg.jpg');
@@ -48,7 +48,7 @@
         </div>
     <div class="history" id="history" hidden>
         <button type="button" onclick="goBack()">Go Back</button>
-        <button type="button" onclick="clearHistory()">Clear History</button><br>
+        <button type="button" onclick="clearHistory()" id="clearHistory">Clear History</button><br>
         <div id="historyWarning">No recorded history found!</div>
         <div id="historyDisplayArea"></div>
     </div>
