re-added button hiding system when 0 history entries after bug fixes

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -47,7 +47,7 @@
         </nav>
         </div>
     <div class="history" id="history" hidden>
-        <button type="button" onclick="goBack()">Go Back</button>
+        <button type="button" onclick="goBack()" class="goBackAndCHistory">Go Back</button>
         <button type="button" onclick="clearHistory()" id="clearHistory">Clear History</button><br>
         <div id="historyWarning">No recorded history found!</div>
         <div id="historyDisplayArea"></div>
