--- a/404.html
+++ b/404.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurab Dhakal</title>
+    <link rel="stylesheet" href="/CSS/404.css">
 </head>
 <body>
-    Page Not Found!!
+    <div class="container">
+        <p class="pMain" id="pMain">Page not found!!</p>
+        <button class="goBack"><a href="index.html">Go Back</a></button>
+    </div>
 </body>
+<script>
+let iTag = document.getElementById('pMain');
+
+function changeColor() {
+    let randCode = Math.floor(Math.random() * (256 * 256 * 256));
+    let hexCode = "#" + randCode.toString(16);
+    iTag.style.backgroundColor = hexCode;
+    console.log(randCode)
+    console.log(hexCode)
+    let textColor = getTextColor(hexCode);
+    iTag.style.color = textColor;
+}
+
+function getTextColor(bgColor) {
+    let r = parseInt(bgColor.slice(1, 3), 16);
+    console.log(r)
+    let g = parseInt(bgColor.slice(3, 5), 16);
+    console.log(g)
+    let b = parseInt(bgColor.slice(5, 7), 16);
+    console.log(b)
+    console.log("          ")
+
+    let brightness = (0.299 * r + 0.587 * g + 0.114 * b) / 255;
+    console.log(brightness);
+    return brightness > 0.5 ? '#000000' : '#FFFFFF';
+}
+
+setInterval(changeColor, 2000);
+
+</script>
 </html>
