--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <p class="pMain" id="pMain">Page not found!!</p>
-        <button class="goBack"><a href="index.html">Go Back</a></button>
+        <a href="index.html" class="goBack">Go Back</a>
     </div>
 </body>
 <script>
