--- a/index.html
+++ b/index.html
@@ -72,4 +72,6 @@
     </div>
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7760784539111054"
+    crossorigin="anonymous"></script>
 </html>
