--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -10,6 +10,8 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/tables.css">
+    <link rel="icon" href=
+    "/Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/extras.css">
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
