--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,3 +1,5 @@
+<link rel="icon" href=
+"/Assests/logo.png" type="image/x-icon">
 <h1>Privacy Policy</h1>
 <p>Last updated: January 08, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
