changed the design of 404 page

--- a/404.html
+++ b/404.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurab Dhakal</title>
     <link rel="stylesheet" href="/CSS/404.css">
+    <link rel="stylesheet" href="/CSS/404mobile.css">
 </head>
 <body>
+    <div>
+        <nav>
+            <div class="logo">Gaurab Dhakal</div>
+        </nav>
+    </div><br>
     <div class="container">
-        <p class="pMain" id="pMain">Page not found!!</p>
+        <img src="/Assests/404.svg" alt="404">
+        <span class="pageNotFoundCode">404</span>
+        <span class="pageNotFoundText">Page Not Found</span>
         <a href="index.html" class="goBack">Go Back</a>
-    </div>
+        </div>
+
 </body>
 <script>
 let iTag = document.getElementById('pMain');
