--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
         background-size: 100% 100%;
     background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp");
     }
-    #divcalculator{
-        background-color: rgb(204, 219, 208);
-    }
 </style>
 <link rel="stylesheet" href="./CSS/index.css" />
 <link rel="stylesheet" href="./CSS/navbar.css" />
+<link rel="stylesheet" href="./CSS/calcMobileDesign.css" />
 <body>
     <div id="navbar">
         <nav>
