--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
     <br />
     <br />
+    <div class="forMobDivCalc">
     <div id="divcalculator">
         <h2 class="selectCalcH2">Select Your Calculator</h2>
         <div>
@@ -51,11 +52,11 @@
         <form>
         <div class="calculator" hidden>
             <h3 id="heading">Calculator V.2</h3>
-            <label>Enter Your First Digit: </label>
+            <label>Number 1: </label>
             <input type="number" id="usrinp_1" placeholder="Enter Your Number" minlength="1" onkeydown="nextElem(event,'usrinp_2')"/><br />
-            <label>Enter Your Second Digit: </label>
+            <label>Number 2: </label>
             <input type="number" id="usrinp_2" placeholder="Enter Your Number" minlength="1" /><br />
-            <label>Select Operator(+,-,*,/): </label>
+            <label>Operator: </label>
             <select id="operator">
                 <option value="+">+</option>
                 <option value="-">-</option>
@@ -70,6 +71,7 @@
             <p id="outputhere"></p>
         </div>
     </div>
+</div>
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7760784539111054"
