made website responsive

--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/extras.css">
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
+    <link rel="stylesheet" href="/CSS/containerMobile.css">
     <title>Youtube Dislike Return</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
