--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
+    <link rel="stylesheet" href="/CSS/containerMobile.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
         body {
@@ -65,6 +66,8 @@
         id="clearHistory">Clear History</button><br>
     </div>
     </div>
+
+    
     <div id="container" class="show">
         <h3>Country Predictor</h3>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
