small changes in the title name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br />
     <div class="forMobDivCalc">
     <div id="divcalculator">
-        <h2 class="selectCalcH2">Select Your Calculator</h2>
+        <h2 class="selectCalcH2">Select the version!</h2>
         <div>
             <button type="button" class="toggle hideShowToggle" onclick="toggle()">
             Calculator V.2
