--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -43,7 +43,7 @@
         </nav>
     </div>
     <div id="container">
-        <h3 align="center">Gender Predictor</h3>
+        <h3 align="center" style="margin-bottom: 10px;">Gender Predictor</h3>
         <br />
         <div>
             <input type="text" id="name" placeholder="Enter the first name here! " />
