--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 <option value="/">/</option>
             </select>
             <br />
+            <span class="buttonsArea">
             <button type="button" class="hideUponClick" onclick="giveOutput()">Calculate</button>
-            <button type="reset" class="hideUponClick" onclick="clearOTA()">Reset</button>
+            <button type="reset" class="hideUponClick" onclick="clearOTA()">Reset</button></span>
         </form>  
             <br />
             <p id="outputhere"></p>
