--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -86,5 +86,16 @@
 
 </body>
 <script src="JS/country_predictor.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HLH5Q0M1F5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HLH5Q0M1F5');
+</script>
+
 <script src="JS/buttonTransform.js"></script>
 </html>
