--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -63,4 +63,15 @@
 </body>
 <script src="./JS/gender_guesser.js"></script>
 <script src="./JS/buttonTransform.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HLH5Q0M1F5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HLH5Q0M1F5');
+</script>
+
 </html>
