--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -67,4 +67,15 @@
 </body>
 <script src="JS/ytdr.js"></script>
 <script src="JS/buttonTransform.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HLH5Q0M1F5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HLH5Q0M1F5');
+</script>
+
 </html>
